[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.9.15"
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
vipers = "1.5.9"
stable-swap-anchor = "1.6.8"
spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
thiserror = "~1.0"
arrayref = "~0.3.6"
bytemuck = { version = "1.4.0" }
enumflags2 = "0.6.4"
borsh = "~0.9.2"